# 2022S_Th4_report1

./: README.md  pyproject.toml
Th4_report/: __main__.py  algorithm.py  backtracking.py  problem.py  vizualize.py
