[tool.poetry]
name = "Th4_report"
version = "0.1.0"
description = ""
authors = ["Shinichi Hemmi <50256998+Alnusjaponica@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
mypy = "^0.960"
black = "^22.3.0"
numpy = "^1.22.4"
scipy = "^1.8.1"
matplotlib = "^3.5.2"
ipykernel = "^6.14.0"
seaborn = "^0.11.2"
japanize-matplotlib = "^1.1.3"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
